--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hls.js": "^1.6.15",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
